--- a/engine/src/main/assets/live/config.json
+++ b/engine/src/main/assets/live/config.json
@@ -1,1 +1,2 @@
-[{"name":"model_1","org_resize":false,"scale":1.0,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"model_2","org_resize":false,"scale":1.0,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"model_4","org_resize":false,"scale":1.0,"shift_y":0,"height":128,"width":128}]
+[{"name":"model_0_1","org_resize":false,"scale":1.1,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"model_1","org_resize":false,"scale":2.5,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"model_4_1","org_resize":false,"scale":1.15,"shift_y":0,"height":128,"width":128}]
+
