--- a/engine/src/main/assets/live/config.json
+++ b/engine/src/main/assets/live/config.json
@@ -1,2 +1,1 @@
-[{"name":"model_0_1","org_resize":false,"scale":1.1,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"model_1","org_resize":false,"scale":2.7,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"model_4_0","org_resize":false,"scale":1.2,"shift_y":0,"height":128,"width":128}]
-
+[{"name":"1.2_80x80_MiniFASNetV2-sim","org_resize":false,"scale":1.2,"shift_x":0.0,"shift_y":0,"height":80,"width":80},{"name":"2.7_80x80_MiniFASNetV2-sim","org_resize":false,"scale":1.2,"shift_x":0.0,"shift_y":0,"height":80,"width":80}, {"name":"1.2_128x128_MobileNet-sim","org_resize":false,"scale":1.2,"shift_x":0.0,"shift_y":0,"height":128,"width":128}]
